try to fix exercise extension

--- a/nhw_ipynb.html
+++ b/nhw_ipynb.html
@@ -12232,6 +12232,15 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Jupyter-notebook-extensions">Jupyter notebook extensions<a class="anchor-link" href="#Jupyter-notebook-extensions">&#182;</a></h1><p>Jupyter notebook extensions give notebooks various additional functionality, but they're not all garaunteed to be stable. You can find instructions for installing them here: <a href="https://github.com/ipython-contrib/jupyter_contrib_nbextensions">https://github.com/ipython-contrib/jupyter_contrib_nbextensions</a></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="IPython-Magic">IPython Magic<a class="anchor-link" href="#IPython-Magic">&#182;</a></h1><p>If you are running your notebook with an python kernel, there are some special built in funcitonality that you can access with "magic" functions. There are line magics that are preceded by a single <code>%</code> and affect only that line and cell magics preceded by <code>%%</code> that you place at the beginning of a cell to modify the behavior of that cell. There are <a href="http://ipython.readthedocs.io/en/stable/interactive/magics.htm">lots of magics</a>, but here are some handy ones.</p>
 
 </div>
@@ -15177,10 +15186,10 @@ xqrt/wACGcJAGa9lHwAAAABJRU5ErkJggg==
 
  
  
-<div id="87aaf8b7-e007-4094-a6a4-0cf16b5b2543"></div>
+<div id="d965d1ad-9363-436c-b2c1-ad20846ddce5"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#87aaf8b7-e007-4094-a6a4-0cf16b5b2543');
+var element = $('#d965d1ad-9363-436c-b2c1-ad20846ddce5');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "604b6f279da54dc5ac4f90addaea8d1d", "version_major": 2, "version_minor": 0}
@@ -15220,10 +15229,10 @@ var element = $('#87aaf8b7-e007-4094-a6a4-0cf16b5b2543');
 
  
  
-<div id="96792bfb-8c23-485b-896e-45e3d6953a83"></div>
+<div id="591e3aff-0b94-4266-9ad4-13dcc33c6c6b"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#96792bfb-8c23-485b-896e-45e3d6953a83');
+var element = $('#591e3aff-0b94-4266-9ad4-13dcc33c6c6b');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "a86ed1ef794445f7b3c20c899e905c85", "version_major": 2, "version_minor": 0}
@@ -15263,10 +15272,10 @@ var element = $('#96792bfb-8c23-485b-896e-45e3d6953a83');
 
  
  
-<div id="ba578820-3c87-4537-9038-b14a6b965eb7"></div>
+<div id="7f9f0525-d294-42c6-8189-3eb24aa4d5e4"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#ba578820-3c87-4537-9038-b14a6b965eb7');
+var element = $('#7f9f0525-d294-42c6-8189-3eb24aa4d5e4');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "9a454be6d43e4b748a8356b424de247b", "version_major": 2, "version_minor": 0}
@@ -15307,10 +15316,10 @@ var element = $('#ba578820-3c87-4537-9038-b14a6b965eb7');
 
  
  
-<div id="8b990ce7-e7e3-43b1-b4bc-02d340f15402"></div>
+<div id="0a327dd4-7ce5-4262-9a6a-1643b42e7971"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#8b990ce7-e7e3-43b1-b4bc-02d340f15402');
+var element = $('#0a327dd4-7ce5-4262-9a6a-1643b42e7971');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "378db8f064cb49d78122608f3e7549d9", "version_major": 2, "version_minor": 0}
@@ -15329,10 +15338,10 @@ var element = $('#8b990ce7-e7e3-43b1-b4bc-02d340f15402');
 
  
  
-<div id="d020005e-f8fb-4b38-924e-0a908f794660"></div>
+<div id="d7cf97e8-1c1f-491e-8494-7d5f06aa7433"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#d020005e-f8fb-4b38-924e-0a908f794660');
+var element = $('#d7cf97e8-1c1f-491e-8494-7d5f06aa7433');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "e1c3650bbba64683a0825d379950c8f4", "version_major": 2, "version_minor": 0}
@@ -15396,10 +15405,10 @@ var element = $('#d020005e-f8fb-4b38-924e-0a908f794660');
 
  
  
-<div id="e23ba062-8499-4361-bd20-684029a3e8c9"></div>
+<div id="34fe2cbe-741f-4c93-848d-a2f2b2fde341"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#e23ba062-8499-4361-bd20-684029a3e8c9');
+var element = $('#34fe2cbe-741f-4c93-848d-a2f2b2fde341');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "a157d47f2a544c55be4bb9923ca8087f", "version_major": 2, "version_minor": 0}
@@ -15461,10 +15470,10 @@ var element = $('#e23ba062-8499-4361-bd20-684029a3e8c9');
 
  
  
-<div id="5b9cdb41-2987-4bde-ac4b-0eba4652d861"></div>
+<div id="a5f0e823-f90c-495c-86b0-74ef0a2b3fc6"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#5b9cdb41-2987-4bde-ac4b-0eba4652d861');
+var element = $('#a5f0e823-f90c-495c-86b0-74ef0a2b3fc6');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "e6fb11be4c2c45d0bb3e1b7560537bf5", "version_major": 2, "version_minor": 0}
@@ -15606,10 +15615,10 @@ var element = $('#5b9cdb41-2987-4bde-ac4b-0eba4652d861');
 
  
  
-<div id="1b8244cc-7adc-44c4-b374-808114df85ef"></div>
+<div id="ba109274-0e01-4755-a687-430ed4a06b6b"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#1b8244cc-7adc-44c4-b374-808114df85ef');
+var element = $('#ba109274-0e01-4755-a687-430ed4a06b6b');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "04e406376bdb43c28b2eaf23a210485a", "version_major": 2, "version_minor": 0}
@@ -15738,10 +15747,10 @@ Requirement already satisfied: notebook&gt;=4.4.1 in /Users/nielsond/miniconda3/
 
  
  
-<div id="2c69f513-2a88-4899-8784-0b8b33d47834"></div>
+<div id="8edfb9d8-bd0d-46fd-89a2-42f0e193fbd9"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#2c69f513-2a88-4899-8784-0b8b33d47834');
+var element = $('#8edfb9d8-bd0d-46fd-89a2-42f0e193fbd9');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "b5447f298b6c4d8d9a77fd81d36375bb", "version_major": 2, "version_minor": 0}
@@ -15785,10 +15794,10 @@ var element = $('#2c69f513-2a88-4899-8784-0b8b33d47834');
 
  
  
-<div id="fa77547a-6f83-469b-aa38-83295d84d339"></div>
+<div id="b00eff9c-5bf7-47fa-a7bb-9f906b376396"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#fa77547a-6f83-469b-aa38-83295d84d339');
+var element = $('#b00eff9c-5bf7-47fa-a7bb-9f906b376396');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "0db66606298d43f69e2fcf8d012ae76b", "version_major": 2, "version_minor": 0}
