Split solutions to their own file

--- a/nhw_ipynb_solution.html
+++ b/nhw_ipynb_solution.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>nhw_ipynb</title><script src="https://unpkg.com/jupyter-js-widgets@2.0.*/dist/embed.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>nhw_ipynb_solution</title><script src="https://unpkg.com/jupyter-js-widgets@2.0.*/dist/embed.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
@@ -12212,6 +12212,22 @@ div#notebook {
 </div>
 
 </div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">bears</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;Yogi Bear&quot;</span>
+        <span class="p">,</span><span class="s2">&quot;Pooh Bear&quot;</span>
+        <span class="p">,</span><span class="s2">&quot;Fuzz Bear&quot;</span>
+        <span class="p">,</span><span class="s2">&quot;Tall Bear&quot;</span><span class="p">]</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -12417,6 +12433,38 @@ div#notebook {
 </pre></div>
 
 </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># %load boring.py</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Not much going on here&quot;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Not much going on here
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
@@ -15138,10 +15186,10 @@ xqrt/wACGcJAGa9lHwAAAABJRU5ErkJggg==
 
  
  
-<div id="f8d21bf9-7a43-4ff4-956f-625bbbd8b367"></div>
+<div id="4bd64f4e-dfc6-402e-90f9-2bf98a81b8d9"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#f8d21bf9-7a43-4ff4-956f-625bbbd8b367');
+var element = $('#4bd64f4e-dfc6-402e-90f9-2bf98a81b8d9');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "604b6f279da54dc5ac4f90addaea8d1d", "version_major": 2, "version_minor": 0}
@@ -15181,10 +15229,10 @@ var element = $('#f8d21bf9-7a43-4ff4-956f-625bbbd8b367');
 
  
  
-<div id="bef10ed1-da3d-4ffa-9684-e4e644ab36d2"></div>
+<div id="48bb70d6-fdb8-4c0f-b39f-b0f7266badd1"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#bef10ed1-da3d-4ffa-9684-e4e644ab36d2');
+var element = $('#48bb70d6-fdb8-4c0f-b39f-b0f7266badd1');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "a86ed1ef794445f7b3c20c899e905c85", "version_major": 2, "version_minor": 0}
@@ -15224,10 +15272,10 @@ var element = $('#bef10ed1-da3d-4ffa-9684-e4e644ab36d2');
 
  
  
-<div id="11048c2d-a8c0-43b6-aab7-5ad79b58b683"></div>
+<div id="afbbdb1c-27b0-4d57-9a23-04ad6dccf293"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#11048c2d-a8c0-43b6-aab7-5ad79b58b683');
+var element = $('#afbbdb1c-27b0-4d57-9a23-04ad6dccf293');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "9a454be6d43e4b748a8356b424de247b", "version_major": 2, "version_minor": 0}
@@ -15268,10 +15316,10 @@ var element = $('#11048c2d-a8c0-43b6-aab7-5ad79b58b683');
 
  
  
-<div id="aab1661e-42d9-469b-a9ba-3fba47317379"></div>
+<div id="48241fad-ba02-4fe1-8351-6677f340221a"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#aab1661e-42d9-469b-a9ba-3fba47317379');
+var element = $('#48241fad-ba02-4fe1-8351-6677f340221a');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "378db8f064cb49d78122608f3e7549d9", "version_major": 2, "version_minor": 0}
@@ -15290,10 +15338,10 @@ var element = $('#aab1661e-42d9-469b-a9ba-3fba47317379');
 
  
  
-<div id="4e07957f-f1d6-4782-96d9-aaab7f2a9eda"></div>
+<div id="fa2977d0-ebb7-4bc5-8476-8b63b4b74cda"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#4e07957f-f1d6-4782-96d9-aaab7f2a9eda');
+var element = $('#fa2977d0-ebb7-4bc5-8476-8b63b4b74cda');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "e1c3650bbba64683a0825d379950c8f4", "version_major": 2, "version_minor": 0}
@@ -15357,10 +15405,10 @@ var element = $('#4e07957f-f1d6-4782-96d9-aaab7f2a9eda');
 
  
  
-<div id="98afd7bf-b21e-4f57-a8f8-fe95952e0850"></div>
+<div id="9b6ebe0b-7db0-4ced-88d1-8a61ad5b20d3"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#98afd7bf-b21e-4f57-a8f8-fe95952e0850');
+var element = $('#9b6ebe0b-7db0-4ced-88d1-8a61ad5b20d3');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "a157d47f2a544c55be4bb9923ca8087f", "version_major": 2, "version_minor": 0}
@@ -15422,10 +15470,10 @@ var element = $('#98afd7bf-b21e-4f57-a8f8-fe95952e0850');
 
  
  
-<div id="804a9280-8d32-447b-8697-39f428381a48"></div>
+<div id="473e1811-717e-4f50-b422-bc3a97a6fe05"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#804a9280-8d32-447b-8697-39f428381a48');
+var element = $('#473e1811-717e-4f50-b422-bc3a97a6fe05');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "e6fb11be4c2c45d0bb3e1b7560537bf5", "version_major": 2, "version_minor": 0}
@@ -15537,6 +15585,52 @@ var element = $('#804a9280-8d32-447b-8697-39f428381a48');
 </div>
 
 </div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[58]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">tp_widget</span> <span class="o">=</span> <span class="n">interactive</span><span class="p">(</span><span class="n">trig_plot</span><span class="p">,</span>
+            <span class="n">frequency</span> <span class="o">=</span> <span class="p">(</span><span class="mf">0.1</span><span class="p">,</span><span class="mf">10.0</span><span class="p">),</span>
+            <span class="n">amplitude</span> <span class="o">=</span> <span class="p">(</span><span class="mf">0.1</span><span class="p">,</span><span class="mf">10.0</span><span class="p">),</span>
+            <span class="n">fx_name</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;sin&#39;</span><span class="p">,</span><span class="s1">&#39;cos&#39;</span><span class="p">,</span><span class="s1">&#39;tan&#39;</span><span class="p">])</span>
+<span class="n">display</span><span class="p">(</span><span class="n">tp_widget</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+
+
+
+ 
+ 
+<div id="be64ee13-59b9-48b5-a814-7f44333b6e00"></div>
+<div class="output_subarea output_widget_view ">
+<script type="text/javascript">
+var element = $('#be64ee13-59b9-48b5-a814-7f44333b6e00');
+</script>
+<script type="application/vnd.jupyter.widget-view+json">
+{"model_id": "04e406376bdb43c28b2eaf23a210485a", "version_major": 2, "version_minor": 0}
+</script>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -15552,6 +15646,20 @@ var element = $('#804a9280-8d32-447b-8697-39f428381a48');
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[61]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">tp_res</span> <span class="o">=</span> <span class="n">tp_widget</span><span class="o">.</span><span class="n">result</span>
+<span class="n">tp_args</span><span class="o">=</span> <span class="n">tp_widget</span><span class="o">.</span><span class="n">args</span>
 </pre></div>
 
 </div>
@@ -15639,10 +15747,10 @@ Requirement already satisfied: notebook&gt;=4.4.1 in /Users/nielsond/miniconda3/
 
  
  
-<div id="f180e3fa-b1cf-42ea-9aab-2bb5be41b0f5"></div>
+<div id="2772e532-c528-492d-bc9c-4ce3bc9f47e4"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#f180e3fa-b1cf-42ea-9aab-2bb5be41b0f5');
+var element = $('#2772e532-c528-492d-bc9c-4ce3bc9f47e4');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "b5447f298b6c4d8d9a77fd81d36375bb", "version_major": 2, "version_minor": 0}
@@ -15686,10 +15794,10 @@ var element = $('#f180e3fa-b1cf-42ea-9aab-2bb5be41b0f5');
 
  
  
-<div id="42d39f64-9e1c-4e40-94fa-1cf6d65d8e44"></div>
+<div id="a786871e-c458-4222-8db1-6da8a6f7079d"></div>
 <div class="output_subarea output_widget_view ">
 <script type="text/javascript">
-var element = $('#42d39f64-9e1c-4e40-94fa-1cf6d65d8e44');
+var element = $('#a786871e-c458-4222-8db1-6da8a6f7079d');
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
 {"model_id": "0db66606298d43f69e2fcf8d012ae76b", "version_major": 2, "version_minor": 0}
@@ -15776,6 +15884,40 @@ Pkg.build(&#34;IJulia&#34;)
 </pre></div>
 
 </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[16]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="o">%%</span><span class="k">writefile</span> install_ijulia.jl
+ENV[&quot;JUPYTER&quot;]=&quot;/Users/nielsond/miniconda3/envs/nhw_ipynb/bin/jupyter&quot;
+Pkg.add(&quot;IJulia&quot;)
+Pkg.build(&quot;IJulia&quot;)
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Overwriting install_ijulia.jl
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
